[package]
name = "passkey-skip"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.44", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse"
]}
systray = "0.4"

[build-dependencies]
embed-resource = "2.1"
windows = "0.44"
